<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReportActivity">

    <TextView
        android:id="@+id/title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/addReport"
        android:textSize="25sp"
        android:textStyle="bold">
    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_content"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/title">
    </EditText>

    <EditText
        android:id="@+id/description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/description">
    </EditText>



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_margin="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="insertReport"
        android:text="@string/save">
    </Button>

</RelativeLayout>