<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <TextView
        android:id="@+id/textView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/title_title">
    </TextView>

    <EditText
        android:id="@+id/editText01"
        android:layout_below="@id/textView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <TextView
        android:id="@+id/textView02"
        android:layout_below="@id/editText01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/description_title">
    </TextView>

    <EditText
        android:id="@+id/editText02"
        android:layout_below="@id/textView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <Button
        android:id="@+id/button01"
        android:layout_below="@id/editText02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save">
    </Button>



</RelativeLayout>

