<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image"
        android:layout_marginTop="50dp">
    </ImageView>

    <TextView
        android:id="@+id/text_title"
        android:layout_below="@id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="25sp">
    </TextView>

    <RelativeLayout
        android:id="@+id/username_comp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/username_title"
            android:textSize="20sp">
        </TextView>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_username"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp">
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_comp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_comp">

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/password_title"
            android:textSize="20sp">
        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_password"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp">
        </EditText>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_above="@id/btn_notas"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="loginSharedPref"
        android:layout_margin="25dp"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btn_notas"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/notes"/>

</RelativeLayout>